# rust-near-template

./: Cargo.toml  Makefile
.github/workflows/: pr_build.yml
src/: account.rs  contract.rs  lib.rs  misc.rs  storage.rs  storage_management.rs  storage_tracker.rs
src/tests/: mod.rs  storage_management_test.rs
src/tests/automation/: mod.rs  storage_management_test.rs  utils.rs
src/tests/common/: mod.rs
